# desktop-tutorial

./: imgToPcl.cpp
DetectSystem/DetectSystem/: DetectAlgorithm.h  DetectSystem.cpp  DetectSystem.h  DetectSystemDlg.cpp  DetectSystemDlg.h  ModelDlg.cpp  ModelDlg.h  ModelDlg2.cpp  ModelDlg2.h  resource.h
GrayImage/GrayImage/: DetectAlgorithm.cpp  DetectAlgorithm.h  GrayImage.cpp  GrayImage.h  ModelCreate.cpp  ModelCreate.h  ParamSet.cpp  ParamSet.h  Test.cpp  Test.h  resource.h
GrayImage/x64/Debug/algorithmFiles/: Para.ini
pcd2txt/: CMakeLists.txt
pcd2txt/src/: f_2022-06-14-10-01-47-830.pcd  f_2022-07-08-11-36-28-511.pcd  f_2022-07-08-11-36-32-307.pcd  pcd2txt.cpp
txt2pcd/: CMakeLists.txt
txt2pcd/src/: txt2pcd.cpp
